# kalman-portfolio-lab

./: LICENSE  README.md  pyproject.toml
apps/: streamlit_app.py
apps/streamlit_app/: app.py
core/: approach2_real.py  cestimate_em_pca.py  cestimate_opt.py  data.py  hybrid.py  kalman_std.py  kf_real.py  yahoo_real.py
core/data/: yahoo.py
core/features/: returns.py
core/models/: em_pca.py  kalman.py
tests/: test_em_pca.py  test_shapes.py
